--- a/css/style.css
+++ b/css/style.css
@@ -3,36 +3,130 @@
     padding: 0;
     margin: 0;
 }
+body {
+    font-family: 'Roboto', sans-serif;
+    color: rgba(255, 255, 255, 0.6)
+}
 
+a {
+    color: rgba(255, 255, 255, 0.6);
+}
+
+/* header */
+.upgrade {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: calc(100% - 250px);
+    height: 100px;
+    opacity: 0.4;
+    background-color: black;
+}
+
+/* main */
 #home {
     display: flex;
     height: calc(100vh - 80px);
 }
-
+/* nav-aside */
 .nav_aside {
+    position: relative;
+    display: flex;
+    flex-direction: column;
     width: 250px;
     min-width: 250px;
     background-color: black;
 }
+#logo {
+    margin: 20px 20px 25px 20px;
+    width: 160px;
+}
+.nav_list {
+    list-style: none;
+}
+.nav_list.nav li {
+    padding: 5px 90px 5px 20px;
+}
+.nav_list a {
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    text-decoration: none;
+}
+.nav_list img {
+    height: 25px;
+    padding-right: 5px;
+}
+.nav_aside h4 {
+    text-transform:  uppercase;
+    margin: 20px 0 10px 20px;
+    color: white;
+}
+.fa-plus-square {
+    margin-right: 10px;
+}
+.new_playlist {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
+.playlist {
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+.playlist span {
+    margin: 5px 0;
+}
+.nav_center {
+    overflow-y: auto;
+}
+.nav_bottom {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+}
+.download {
+    width: 85%;
+    display: flex;
+    align-items: center;
+    padding-bottom: 10px;
+    border-bottom: 1px solid grey;
+}
+.download img {
+    width: 15px;
+    margin-right: 10px;
+}
+.profile {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding: 10px 20px;
+}
+.profile img {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+    border-radius: 50%;
+    background-color: grey;
+}
+
+
 
 .music {
     flex-grow: 1;
     overflow-y: auto;
-    padding-top: 80px;
+    padding-top: 100px;
     background-color: #141922;
 }
+
+
 
 #player {
     height: 80px;
     background-color: #282828;
-}
-
-.upgrade {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    opacity: 0.4;
-    background-color: black;
 }
