--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,28 @@ body {
     color: rgba(255, 255, 255, 0.6)
 }
 
-a {
-    color: rgba(255, 255, 255, 0.6);
-}
 
 /* header */
 .upgrade {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     position: fixed;
     top: 0;
     right: 0;
     width: calc(100% - 250px);
     height: 100px;
-    opacity: 0.4;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+.upgrade a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: white;
+    font-weight: 500;
+    padding: 10px 40px;
+    border: 1px solid white;
+    border-radius: 30px;
+    margin-right: 15px;
 }
 
 /* main */
@@ -30,13 +39,15 @@ a {
 }
 /* nav-aside */
 .nav_aside {
-    position: relative;
     display: flex;
     flex-direction: column;
     width: 250px;
     min-width: 250px;
     background-color: black;
 }
+#home a {
+    color: rgba(255, 255, 255, 0.6);
+} 
 #logo {
     margin: 20px 20px 25px 20px;
     width: 160px;
@@ -80,10 +91,9 @@ a {
 }
 .nav_center {
     overflow-y: auto;
+    flex-grow: 1;
 }
 .nav_bottom {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -106,6 +116,8 @@ a {
     display: flex;
     align-items: center;
     padding: 10px 20px;
+    color: white;
+    font-weight: 500;
 }
 .profile img {
     width: 30px;
