--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ body {
 }
 .fa-plus-square {
     margin-right: 10px;
+    font-size: 35px;
 }
 .new_playlist {
     display: flex;
@@ -151,12 +152,12 @@ body {
     color: white;
 }
 .wrapper {
-    padding: 0 20px;
+    padding: 0 40px;
 }
 .recently_items {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-bottom: 40px;
 }
 .item {
@@ -196,8 +197,76 @@ body {
     background-color: #282828;
 }
 .song_name {
+    display: flex;
+    align-items: center;
     width: 250px;
 }
-.timeline {
+.text_song_name {
     flex-grow: 1;
+}
+.song_name img {
+    margin: 0 15px;
+    width: 50px;
+}
+.fa-folder {
+    margin: 0 10px;
+}
+.timeline {
+    height: 60px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+.comands {
+    width: 250px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.fa-play-circle {
+    font-size: 25px;
+}
+.timeline .time_left {
+    height: 4px;
+    width: 100px;
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, 0.6);
+}
+.timeline .time_right {
+    height: 4px;
+    width: 350px;
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+.timeline .line {
+    display: flex;
+    margin: 0 25px;
+}
+.time {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.line_volume {
+    display: flex;
+}
+.volume {
+    width: 250px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.volume_left {
+    height: 4px;
+    width: 30px;
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, 0.6);
+}
+.volume_right {
+    height: 4px;
+    width: 80px;
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, 0.2);
 }
