--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    scrollbar-color: #282828 #141922;
 }
 body {
     font-family: 'Roboto', sans-serif;
@@ -284,6 +285,7 @@ body {
     display: flex;
     width: 80%;
     align-items: center;
+    height: 25px;
 }
 .time {
     display: flex;
@@ -343,7 +345,7 @@ body {
     color: white;
 }
 #player .fa-play-circle:hover {
-    transform: scale(1.1);
+    transform: scale(1.2);
 }
 #player .line_volume:hover .volume_left,
 #player .line:hover .time_left {
