--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
 }
 #logo_small {
     height: 30px;
-    margin-bottom: 10px;
+    margin: 10px 0;
 }
 .nav_top a {
     padding: 5px 70px 5px 20px;
@@ -437,8 +437,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-around;
-        height: 17%;
+        justify-content: space-around;    
     }
     .nav_top a,
     .nav_top img {
@@ -541,6 +540,14 @@ body {
     }
     .music {
         padding-top: 0;
+    }
+
+}
+
+@media screen and (max-height: 500px) {
+  
+    .nav_bottom {
+        display: none;
     }
 
 }
