--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ body {
     overflow: hidden;
 }
 .upgrade a {
+    /* position: absolute;
+    top: 50%;
+    right: 5%;
+    transform: translateY(-50%); */
     text-decoration: none;
     text-transform: uppercase;
     color: white;
@@ -131,6 +135,7 @@ body {
     background-color: grey;
 }
 
+/* schermata canzoni */
 .music {
     flex-grow: 1;
     overflow-y: auto;
@@ -181,6 +186,7 @@ body {
 }
 .item img {
     width: 100%;
+    height: 100%;
 }
 .item h3 {
     text-align: center;
@@ -226,7 +232,7 @@ body {
     border-radius: 50%;
 }
 
-
+/* footer */
 #player {
     display: flex;
     justify-content: space-between;
@@ -303,6 +309,9 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+.volume > * {
+    margin: 0 2px;
 }
 .volume_left {
     height: 4px;
@@ -467,15 +476,11 @@ body {
         width: auto;
         border: none;
     }
-
-    .song_name {
-        width: 25%;
-    }
-    .volume {
-        width: 25%;
-    }
     .timeline {
         width: 50%;
+    }
+    .timeline .line {
+        margin: 0 5px;
     }
     .upgrade {
         width: calc(100% - 50px);
@@ -487,10 +492,10 @@ body {
 
 @media screen and (max-width: 500px) {
 
-    .icon_song_name,
+    /* .icon_song_name,
     .volume {
         display: none;
-    }
+    } */
     .timeline {
         width: 70%;
     }
@@ -502,20 +507,17 @@ body {
     }
     .song_name img {
         margin: 0 5px;
-        width: 40px;
+        width: 30px;
     }
     .text_song_name {
         flex-grow: 0;
+        font-size: 13px;
     }
     .time {
         width: 90%;
     }
     .timeline .line {
         width: 80%;
-        margin: 0 5px;
-    }
-    .nav_bar {
-        justify-content: flex-start;
     }
     .nav_bar span {
         margin: 20px 0px 10px;
@@ -528,6 +530,9 @@ body {
     }
     .item h3 {
         font-size: 14px;
+    }
+    .fa-folder {
+        margin: 0 5px;
     }
     
 
